# human-os-expanded

./: .cursorrules  .cursorrules.bak  .env.production.template  .gitignore  .mcp-registry.json  .npmrc  .repomix-output.txt  .vercelignore  ACCOUNT_OVERVIEW_ENHANCEMENTS.md  AGENT2_COMPLETION_REPORT.md  ARCHITECTURE.md  ARTIFACTSPANEL_REFACTORING.md  AUTHENTICATION_SETUP_GUIDE.md  AUTHENTICATION_SYSTEM_README.md  AUTH_OPTIMIZATION_SUMMARY.md  AUTH_SETUP.md  BE_ACT1_TASKS_V2.md  BE_START_HERE.md  CLAUDE.md  CODEBASE_ANALYSIS.md  COMBINED-SYSTEM-ARCHITECTURE.md  COMMIT-SUMMARY-PHASE2C.md  CONTRIBUTING.md  CUSTOMERLIST_REFACTORING_PROGRESS.md  CUSTOMER_WORKFLOW_SYSTEM_README.md  DATABASE_SCHEMA_GUIDE.md  DATABASE_SYSTEM_GUIDE.md  FE_ACT1_TASKS_V2.md  FE_START_HERE.md  GAPS.md  GOOGLE_OAUTH_SETUP.md  ID_STRUCTURE_GUIDE.md  LAYOUT_FIX_SUMMARY.md  MIGRATION_COMPARISON_ANALYSIS.md  MIGRATION_OPTIMIZATION_SUMMARY.md  NEW_WORKER_ONBOARDING.md  OAUTH_AUTHENTICATION_GUIDE.md  OAUTH_CLEANUP_SUMMARY.md  OAUTH_COMPLETE_SOLUTION.md  OAUTH_FIX_SUMMARY.md  (+59 more)
apps/ari/backend/: .vercelignore  pyproject.toml  requirements.txt  score_pilot.py  test_competitor_methods.py  vercel.json
apps/ari/backend/api/: index.py
apps/ari/backend/app/: __init__.py  config.py  main.py  model_registry.py  notifications.py
apps/ari/backend/app/models/: __init__.py  article.py  article_pipeline.py  audit.py  entity.py  lite_report.py  prompt.py  publications.py  response.py  score.py  zero_mention_probe.py
apps/ari/backend/app/routers/: __init__.py  article_pipeline.py  audit.py  content.py  deliverables.py  discovery.py  entities.py  lite_report.py  optimizer.py  prompts.py  publications.py  scores.py  search.py  testing.py
apps/ari/backend/app/services/: __init__.py  anti_pattern_detector.py  article_condenser.py  (+30 more)
apps/ari/backend/database/: 001-fancyrobot-schema.sql  002-entities-standardization.sql  003-snapshot-bypasses.sql  004-brand-cache.sql  005-snapshot-competitors.sql  006-promo-codes.sql  007-article-pipeline.sql  009-publication-viability.sql  README.md
apps/ari/backend/promptfoo/: condenser.yaml  discovery.yaml  promptfooconfig.yaml  response-parser.yaml  synthesis.yaml
apps/ari/backend/scripts/: import_all.py  run_condenser_both.py  run_usm_ira_pipeline.py  score_group.py  test_condenser.py
apps/goodhang-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/goodhang-desktop/src-tauri/capabilities/: default.json
apps/goodhang-desktop/src-tauri/icons/: .gitkeep
apps/goodhang-desktop/src-tauri/src/: lib.rs  main.rs
apps/workflows/: README.md  pyproject.toml  requirements.txt  server.py
(+4144 files in other folders)
