[project]
name = "human-os-workflows"
version = "0.1.0"
description = "Human OS Workflows - FastMCP server with Prefect orchestration"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "prefect>=3.0.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
